<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <ImageView
            android:id="@+id/imLogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/tip_null"
            android:src="@drawable/uiasset21" />

        <com.model.tool.view.EditTextWithDel
            android:id="@+id/etid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/wid"
            android:inputType="text"
            android:singleLine="true" />

        <com.model.tool.view.EditTextWithDel
            android:id="@+id/etpwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/wpwd"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnlogin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn07"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/resign" />
    </LinearLayout>

</RelativeLayout>