<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:id="@+id/includeTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/act_topbar" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/btn07"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/btnOk"
        android:layout_below="@id/includeTop"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/xhcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/code" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etxh"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_toLeftOf="@id/xhcode"
                    android:hint="@string/xh"
                    android:inputType="text"
                    android:singleLine="true" />
            </RelativeLayout>

            <com.model.tool.view.EditTextWithDel
                android:id="@+id/etrq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/rq"
                android:inputType="time"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:text="@string/truckinfo"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#90909090" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/zcid"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/zcidcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/code" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etzcid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_toLeftOf="@id/zcidcode"
                    android:layout_toRightOf="@id/t4"
                    android:inputType="text"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/gcid"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/gcidcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/code" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etgcid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_toLeftOf="@id/gcidcode"
                    android:layout_toRightOf="@id/t2"
                    android:inputType="text"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/qfh"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/qfhcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/code" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etqfh"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_toLeftOf="@id/qfhcode"
                    android:layout_toRightOf="@id/t3"
                    android:inputType="text"
                    android:singleLine="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dzkh"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etdzkh"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:text="@string/goodsinfo"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#90909090" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jz"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etjz"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:hint="@string/kg"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mz"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etmz"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:hint="@string/kg"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:text="@string/sir"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#90909090" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sjxm"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/etsjxm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hzh"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <com.model.tool.view.EditTextWithDel
                    android:id="@+id/ethzh"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/img"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" 
                    >
                    <Button
                        android:id="@+id/ibimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/iadd"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/ibibook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ibook" 
                        tools:ignore="ButtonStyle" 
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>